# QT6.8.3-Doodle-Drawer

DoodleDrawer/: CMakeLists.txt
DoodleDrawer/Controllers/: messageprocesshandler.cpp  messageprocesshandler.h
DoodleDrawer/DoodleDrawerClient/: main.cpp
DoodleDrawer/DoodleDrawerClient/Controllers/: websockethandler.cpp  websockethandler.h
DoodleDrawer/DoodleDrawerClient/Ui/: GameButton.qml  GameSelectScreen.qml  Main.qml  MainMenuScreen.qml
DoodleDrawer/DoodleDrawerServer/: README.md  gamelobbyhandler.cpp  gamelobbyhandler.h  gamemanager.cpp  gamemanager.h  main.cpp  messageprocessorhandler.cpp  messageprocessorhandler.h  websockethandler.cpp  websockethandler.h
DoodleDrawerClient/: CMakeLists.txt  Main.qml  main.cpp
DoodleDrawerServer/: CMakeLists.txt  gamemanager.cpp  websockethandler.cpp
